fixed css for anchor wrapped span

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -85,8 +85,16 @@ form textarea{
 }
 
 .profilePostsBookmarks{
+    width: 100%;
     display: flex;
     justify-content: space-around;
+}
+
+.profilePostsBookmarks a{
+    width: 25%;
+    text-align: center;
+    border-bottom: 1px solid rgba(101, 101, 101, .6);
+    padding-bottom: 1rem;
 }
 
 .tabs{
@@ -94,21 +102,8 @@ form textarea{
     justify-content: space-around;
 }
 
-.profileTab{
-    padding: 0 5rem 1rem 5rem;
-    border-bottom: 1px solid rgba(101, 101, 101, .6);
-    width: 20%;
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
-}
-
-.profileTab:hover{
+.profilePostsBookmarks a:hover{
     border-bottom: 1px solid rgba(255, 255, 255, 1);
-}
-
-.PostsBookmarksAnchor{
-    display: inline;
 }
 
 .profileMsg{
